ghc-4335c07/testsuite/tests/indexed-types/should_compile/T11361a.stderr

T11361a.hs:7:3: error:
    • Kind mis-match on LHS of default declaration for ‘F’
    • In the default type instance declaration for ‘F’
      In the class declaration for ‘C’
