ghc-4335c07/testsuite/tests/indexed-types/should_compile/T11361a.hs
{-# LANGUAGE TypeFamilies, PolyKinds #-}

module T11361a where

class C a where
  type F (a :: k) :: *
  type F (x :: *) = x    -- Not right!
